Notated Demo_API_SQL and Demo_API_FileSystem

--- a/example/Demo_API_FileSystem.ipynb
+++ b/example/Demo_API_FileSystem.ipynb
@@ -24,8 +24,7 @@
     "from ndi import DaqSystem, FileNavigator\n",
     "from ndi.database.file_system import FileSystem as Database, BinaryCollection\n",
     "from ndi.query import Query as Q, AndQuery, OrQuery\n",
-    "from ndi.database.utils import print_everything_in, destroy_everything_in\n",
-    "from sqlalchemy import and_, or_"
+    "from ndi.database.utils import print_everything_in, destroy_everything_in"
    ]
   },
   {
@@ -43,6 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Connecting to FileSystem database, passing in a path to a directory\n",
     "db = Database('../test_db')\n",
     "destroy_everything_in(db)"
    ]
@@ -53,6 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating/connecting to binary collection, passing in path and collection name\n",
     "bc = BinaryCollection('../test_db', name='demo')"
    ]
   },
@@ -62,9 +63,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating FileNavigator object, passing in regex patterns\n",
     "fn = FileNavigator(epoch_file_patterns=['.*\\\\.wav', '.*\\\\.txt'], \n",
     "                   metadata_file_pattern='.*\\\\.txt')\n",
+    "\n",
+    "# Mock EpochProbeMap class used just for this demo\n",
     "class MockEpochProbeMap: pass\n",
+    "\n",
+    "# Creating DaqSystem objects\n",
     "daqs = [\n",
     "    DaqSystem('ds0', fn, MockReader, MockEpochProbeMap),\n",
     "    DaqSystem('ds1', fn, MockReader, MockEpochProbeMap)\n",
@@ -77,6 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating an Experiment object and connecting it to its context\n",
     "exp = Experiment('test_experiment').connect(\n",
     "    directory='../tests/data/intracell_example',\n",
     "    database=db,\n",
@@ -92,6 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating and adding probes to the database through the experiment\n",
     "probes = [\n",
     "    Probe('p0', 0, 'ntrode', daq_system_id=daqs[0].id),\n",
     "    Probe('p1', 1, 'ntrode', daq_system_id=daqs[0].id),\n",
@@ -121,6 +129,7 @@
     }
    ],
    "source": [
+    "# Showing that probes were added\n",
     "exp.get_probes()"
    ]
   },
@@ -130,6 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating and adding channels to the database through the probes\n",
     "channels0 = [\n",
     "    Channel('p0c0', 0, 'time', 'file0'),\n",
     "    Channel('p0c1', 1, 'digital_out', 'file0'),\n",
@@ -165,6 +175,7 @@
     }
    ],
    "source": [
+    "# Getting channels via probes\n",
     "probes[0].get_channels()"
    ]
   },
@@ -202,6 +213,7 @@
     }
    ],
    "source": [
+    "# Getting channels via experiment\n",
     "exp.get_channels()"
    ]
   },
@@ -211,6 +223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating and adding epochs to the database through experiment\n",
     "epochs = [\n",
     "    Epoch(daq_system_ids=[daqs[0].id]),\n",
     "    Epoch(daq_system_ids=[daqs[0].id])\n",
@@ -236,6 +249,7 @@
     }
    ],
    "source": [
+    "# Getting epochs via experiment\n",
     "exp.get_epochs()"
    ]
   },
@@ -245,6 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating and adding a document to the database though experiment\n",
     "doc = Document({'hello': 'world'}, name='doc', type_='independent')\n",
     "exp.add_document(doc)"
    ]
@@ -275,6 +290,7 @@
     }
    ],
    "source": [
+    "# Finding the just-added document\n",
     "exp.ctx.db.find_by_id(doc.id).data"
    ]
   },
@@ -295,6 +311,7 @@
     }
    ],
    "source": [
+    "# Getting document dependencies\n",
     "exp.current.get_document_dependencies()"
    ]
   },
@@ -312,6 +329,7 @@
     }
    ],
    "source": [
+    "# Deleting the document\n",
     "print(doc.id)\n",
     "doc.delete(force=True)"
    ]
@@ -360,13 +378,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [
@@ -391,8 +402,11 @@
     }
    ],
    "source": [
+    "# Adding more complex document to database\n",
     "doc = Document({\"list\": [\"abc\", \"def\", \"ghi\"]}, 'list-doc')\n",
     "db.add(doc)\n",
+    "\n",
+    "# Finding document using query\n",
     "[d.data for d in db.find(Q('list').contains('def'))]"
    ]
   },
@@ -428,6 +442,7 @@
     }
    ],
    "source": [
+    "# Reconnect to an experiment that already exists in database\n",
     "Experiment('test_experiment').connect(\n",
     "    database=db,\n",
     "    binary_collection=bc,\n",
@@ -460,6 +475,7 @@
     }
    ],
    "source": [
+    "# Create new experiment that doesn't exist in the database\n",
     "Experiment('test_dfjslfjdkf').connect(\n",
     "    database=db,\n",
     "    binary_collection=bc,\n",
