--- a/example/Demo_API_SQL.ipynb
+++ b/example/Demo_API_SQL.ipynb
@@ -44,6 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Connecting to SQL database, passing in a connection string\n",
     "db = Database('postgres://postgres:1Password!@localhost:5432/practice')\n",
     "destroy_everything_in(db)"
    ]
@@ -54,6 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating/connecting to binary collection, passing in path and collection name\n",
     "bc = BinaryCollection('../test_db', name='demo')"
    ]
   },
@@ -63,9 +65,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating FileNavigator object, passing in regex patterns\n",
     "fn = FileNavigator(epoch_file_patterns=['.*\\\\.wav', '.*\\\\.txt'], \n",
     "                   metadata_file_pattern='.*\\\\.txt')\n",
+    "\n",
+    "# Mock EpochProbeMap class used just for this demo\n",
     "class MockEpochProbeMap: pass\n",
+    "\n",
+    "# Creating DaqSystem objects\n",
     "daqs = [\n",
     "    DaqSystem('ds0', fn, MockReader, MockEpochProbeMap),\n",
     "    DaqSystem('ds1', fn, MockReader, MockEpochProbeMap)\n",
@@ -78,6 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating an Experiment object and connecting it to its context\n",
     "exp = Experiment('test_experiment').connect(\n",
     "    directory='../tests/data/intracell_example',\n",
     "    database=db,\n",
@@ -93,6 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating and adding probes to the database through the experiment\n",
     "probes = [\n",
     "    Probe('p0', 0, 'ntrode', daq_system_id=daqs[0].id),\n",
     "    Probe('p1', 1, 'ntrode', daq_system_id=daqs[0].id),\n",
@@ -122,6 +131,7 @@
     }
    ],
    "source": [
+    "# Showing that probes were added\n",
     "exp.get_probes()"
    ]
   },
@@ -131,6 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating and adding epochs to the database through experiment\n",
     "epochs = [\n",
     "    Epoch(daq_system_ids=[daqs[0].id]),\n",
     "    Epoch(daq_system_ids=[daqs[0].id])\n",
@@ -145,6 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating and adding channels to the database through the probes\n",
     "channels0 = [\n",
     "    Channel('p0c0', 0, 'time', 'file0', epoch_id=epochs[0].id),\n",
     "    Channel('p0c1', 1, 'digital_out', 'file0', epoch_id=epochs[0].id),\n",
@@ -180,6 +192,7 @@
     }
    ],
    "source": [
+    "# Getting channels via probes\n",
     "probes[0].get_channels()"
    ]
   },
@@ -217,6 +230,7 @@
     }
    ],
    "source": [
+    "# Getting channels via experiment\n",
     "exp.get_channels()"
    ]
   },
@@ -226,6 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Getting epochs via experiment\n",
     "epoch = exp.get_epochs()[0]"
    ]
   },
@@ -248,6 +263,7 @@
     }
    ],
    "source": [
+    "# Getting channels via epoch\n",
     "epoch.get_channels()"
    ]
   },
@@ -270,6 +286,7 @@
     }
    ],
    "source": [
+    "# Printing __dict__ property of each channel\n",
     "for c in epoch.get_channels():\n",
     "    print(type(c))\n",
     "    print(c.ctx.__dict__)"
@@ -281,6 +298,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating and adding a document to the database though experiment\n",
     "doc = Document({'hello': 'world'}, name='doc', type_='independent')\n",
     "exp.add_document(doc)"
    ]
@@ -311,6 +329,7 @@
     }
    ],
    "source": [
+    "# Finding the just-added document\n",
     "exp.ctx.db.find_by_id(doc.id).data"
    ]
   },
@@ -331,6 +350,7 @@
     }
    ],
    "source": [
+    "# Getting document dependencies\n",
     "exp.current.get_document_dependencies()"
    ]
   },
@@ -348,6 +368,7 @@
     }
    ],
    "source": [
+    "# Deleting the document\n",
     "print(doc.id)\n",
     "doc.delete(force=True)"
    ]
@@ -427,8 +448,11 @@
     }
    ],
    "source": [
+    "# Adding more complex document to database\n",
     "doc = Document({\"list\": [\"abc\", \"def\", \"ghi\"]}, 'list-doc')\n",
     "exp.add_document(doc)\n",
+    "\n",
+    "# Finding document using query\n",
     "[d.data for d in db.find(Q('list').contains('def'))]"
    ]
   },
@@ -464,6 +488,7 @@
     }
    ],
    "source": [
+    "# Reconnect to an experiment that already exists in database\n",
     "Experiment('test_experiment').connect(\n",
     "    database=db,\n",
     "    binary_collection=bc,\n",
@@ -496,6 +521,7 @@
     }
    ],
    "source": [
+    "# Create new experiment that doesn't exist in the database\n",
     "Experiment('test_abacadaba').connect(\n",
     "    database=db,\n",
     "    binary_collection=bc,\n",
