minor grammatical fixes & additional comments

--- a/example/Demo_API_Core.ipynb
+++ b/example/Demo_API_Core.ipynb
@@ -22,8 +22,8 @@
    "source": [
     "from ndi import Experiment, Document, Query as Q\n",
     "\n",
-    "from ndi.database.sql import SQL as Database\n",
-    "from ndi.database.file_system import BinaryCollection\n",
+    "from ndi.database.sql import SQL\n",
+    "from ndi.database.file_system import FileSystem, BinaryCollection\n",
     "\n",
     "from ndi import DaqSystem, FileNavigator\n",
     "from ndi.daqreaders import CEDSpike2\n",
@@ -39,8 +39,10 @@
    "outputs": [],
    "source": [
     "# Connecting to SQL database, passing in connection string\n",
-    "db = Database('postgres://postgres:1Password!@localhost:5432/practice')\n",
-    "#db = ndi.database.FileSystem('./test_db')\n",
+    "db = SQL('postgres://postgres:1Password!@localhost:5432/practice')\n",
+    "# Can be run with FileSystem database instead, passing in database directory\n",
+    "# db = FileSystem('./test_db')\n",
+    "# Clear database for clean run\n",
     "destroy_everything_in(db)"
    ]
   },
@@ -79,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creating an Experiment object and connecting it to its context\n",
+    "# Creating a new Experiment object and connecting it to its context\n",
     "exp = Experiment('demo_api_core').connect(\n",
     "    directory='../tests/data/intracell_example',\n",
     "    database=db,\n",
@@ -97,13 +99,13 @@
     {
      "data": {
       "text/plain": [
-       "([<ndi.core.Epoch at 0x12f0359d0>,\n",
-       "  <ndi.core.Epoch at 0x12f0ea850>,\n",
-       "  <ndi.core.Epoch at 0x12f0ea250>],\n",
-       " [<ndi.core.Probe at 0x12f0ea490>, <ndi.core.Probe at 0x12f0ea460>],\n",
-       " [<ndi.core.Channel at 0x12f0ea550>,\n",
-       "  <ndi.core.Channel at 0x12f0c5910>,\n",
-       "  <ndi.core.Channel at 0x12f0c5100>])"
+       "([<ndi.core.Epoch at 0x11e381880>,\n",
+       "  <ndi.core.Epoch at 0x11e45a040>,\n",
+       "  <ndi.core.Epoch at 0x11e45a5e0>],\n",
+       " [<ndi.core.Probe at 0x11e45a820>, <ndi.core.Probe at 0x11e45aa30>],\n",
+       " [<ndi.core.Channel at 0x11e45a8e0>,\n",
+       "  <ndi.core.Channel at 0x11e476a90>,\n",
+       "  <ndi.core.Channel at 0x11e476820>])"
       ]
      },
      "execution_count": 7,
@@ -124,9 +126,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Epoch at 0x12f0bb760>,\n",
-       " <ndi.core.Epoch at 0x10d3e4730>,\n",
-       " <ndi.core.Epoch at 0x10d3e4460>]"
+       "[<ndi.core.Epoch at 0x11e428a00>,\n",
+       " <ndi.core.Epoch at 0x11e428550>,\n",
+       " <ndi.core.Epoch at 0x10509b2b0>]"
       ]
      },
      "execution_count": 8,
@@ -148,8 +150,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': 'c3afdc7fde204264858102ef73b8c44e', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 1, 'daq_system_id': '52be1c0b3ff54cf59ffa7b4724449152', 'type': 'sharp-Vm'}\n",
-      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': 'c3afdc7fde204264858102ef73b8c44e', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 2, 'daq_system_id': '52be1c0b3ff54cf59ffa7b4724449152', 'type': 'sharp-Vm'}\n"
+      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': '8de2b2ace85945e29131cbd6fd41add2', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 1, 'daq_system_id': '78d25aa1883f4e0ea6b2c6580076cacb', 'type': 'sharp-Vm'}\n",
+      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': '8de2b2ace85945e29131cbd6fd41add2', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 2, 'daq_system_id': '78d25aa1883f4e0ea6b2c6580076cacb', 'type': 'sharp-Vm'}\n"
      ]
     }
    ],
@@ -170,9 +172,7 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Channel at 0x10d4207f0>,\n",
-       " <ndi.core.Channel at 0x10d420850>,\n",
-       " <ndi.core.Channel at 0x10d420dc0>]"
+       "[<ndi.core.Probe at 0x11e45a7f0>]"
       ]
      },
      "execution_count": 10,
@@ -181,8 +181,10 @@
     }
    ],
    "source": [
-    "# Retrieving channels for this experiment from the database\n",
-    "exp.get_channels()"
+    "# Finding probes using a query\n",
+    "by_name = Q('_metadata.name') == 'intra'\n",
+    "by_ref = Q('reference') < 2\n",
+    "exp.find_probes(by_name & by_ref)"
    ]
   },
   {
@@ -193,7 +195,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Probe at 0x12f0f78b0>]"
+       "[<ndi.core.Channel at 0x1050d67f0>,\n",
+       " <ndi.core.Channel at 0x11e466760>,\n",
+       " <ndi.core.Channel at 0x11e442a00>]"
       ]
      },
      "execution_count": 11,
@@ -202,10 +206,8 @@
     }
    ],
    "source": [
-    "# Finding probes using a query\n",
-    "by_name = Q('_metadata.name') == 'intra'\n",
-    "by_ref = Q('reference') < 2\n",
-    "exp.find_probes(by_name & by_ref)"
+    "# Retrieving channels for this experiment from the database\n",
+    "exp.get_channels()"
    ]
   },
   {
@@ -251,7 +253,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<ndi.context.Context object at 0x12f0bb940>\n"
+      "<ndi.context.Context object at 0x11e4284f0>\n"
      ]
     }
    ],
@@ -274,16 +276,15 @@
      "output_type": "stream",
      "text": [
       "b'Took the G'\n",
-      "53\n",
       "b'ego.'\n"
      ]
     }
    ],
    "source": [
-    "# Reading from the document dependencies binary fork\n",
+    "# Reading from the document dependency's binary fork\n",
     "with deps[2].binary.open_read_stream() as rs:\n",
     "    print(rs.read(10))\n",
-    "    print(rs.seek(53))\n",
+    "    rs.seek(53)\n",
     "    print(rs.read())"
    ]
   },
@@ -295,9 +296,9 @@
     {
      "data": {
       "text/plain": [
-       "{'dre': 'f010e4ee6e494ec1bc75b65a061d57a2',\n",
-       " 'm&m': 'c50629a35ea14bdda42917bfe98ea56e',\n",
-       " 'gambino': 'babbbc22084a4b61955c2d936b5a9209'}"
+       "{'dre': 'c97a34ea498c4a2090ec79fb2d91859f',\n",
+       " 'm&m': '0fdea40f1c5b4175811174f24b04ab59',\n",
+       " 'gambino': 'f92e99b514ca4df69ec8b01869692385'}"
       ]
      },
      "execution_count": 16,
@@ -317,7 +318,7 @@
     {
      "data": {
       "text/plain": [
-       "['070e75c489914095b0bc69eff057b439']"
+       "['8c10e10ca76e498f9d490f1526f60c38']"
       ]
      },
      "execution_count": 17,
@@ -339,9 +340,9 @@
       "text/plain": [
        "{'_metadata': {'name': 'og',\n",
        "  'type': 'rapper',\n",
-       "  'experiment_id': 'c3afdc7fde204264858102ef73b8c44e',\n",
-       "  'parent_id': '070e75c489914095b0bc69eff057b439',\n",
-       "  'asc_path': ',070e75c489914095b0bc69eff057b439',\n",
+       "  'experiment_id': '8de2b2ace85945e29131cbd6fd41add2',\n",
+       "  'parent_id': '8c10e10ca76e498f9d490f1526f60c38',\n",
+       "  'asc_path': ',8c10e10ca76e498f9d490f1526f60c38',\n",
        "  'version_depth': 1,\n",
        "  'latest_version': True},\n",
        " '_dependencies': {},\n",
@@ -361,6 +362,7 @@
     "og_doc.save_updates()\n",
     "\n",
     "# Verifying that the changes were made\n",
+    "#   New version of document has no dependencies\n",
     "exp.ctx.db.find_by_id(og_doc.id).data"
    ]
   },
@@ -374,15 +376,15 @@
       "text/plain": [
        "{'_metadata': {'name': 'og',\n",
        "  'type': 'rapper',\n",
-       "  'experiment_id': 'c3afdc7fde204264858102ef73b8c44e',\n",
+       "  'experiment_id': '8de2b2ace85945e29131cbd6fd41add2',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': False},\n",
-       " '_dependencies': {'dre': 'f010e4ee6e494ec1bc75b65a061d57a2',\n",
-       "  'm&m': 'c50629a35ea14bdda42917bfe98ea56e',\n",
-       "  'gambino': 'babbbc22084a4b61955c2d936b5a9209'},\n",
-       " '_depends_on': ['c3afdc7fde204264858102ef73b8c44e'],\n",
+       " '_dependencies': {'dre': 'c97a34ea498c4a2090ec79fb2d91859f',\n",
+       "  'm&m': '0fdea40f1c5b4175811174f24b04ab59',\n",
+       "  'gambino': 'f92e99b514ca4df69ec8b01869692385'},\n",
+       " '_depends_on': ['8de2b2ace85945e29131cbd6fd41add2'],\n",
        " 'number': 0,\n",
        " 'trait': 'realest'}"
       ]
@@ -393,7 +395,7 @@
     }
    ],
    "source": [
-    "# Getting a document's version history\n",
+    "# Getting the document's oldest version\n",
     "v0_og_doc = og_doc.get_history()[0]\n",
     "v0_og_doc.data"
    ]
@@ -406,9 +408,9 @@
     {
      "data": {
       "text/plain": [
-       "{'dre': 'f010e4ee6e494ec1bc75b65a061d57a2',\n",
-       " 'm&m': 'c50629a35ea14bdda42917bfe98ea56e',\n",
-       " 'gambino': 'babbbc22084a4b61955c2d936b5a9209'}"
+       "{'dre': 'c97a34ea498c4a2090ec79fb2d91859f',\n",
+       " 'm&m': '0fdea40f1c5b4175811174f24b04ab59',\n",
+       " 'gambino': 'f92e99b514ca4df69ec8b01869692385'}"
       ]
      },
      "execution_count": 20,
@@ -417,6 +419,7 @@
     }
    ],
    "source": [
+    "# The document's previous version retains its dependencies\n",
     "v0_og_doc.dependencies"
    ]
   },
@@ -429,9 +432,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'og': <ndi.document.Document object at 0x13484b130>}\n",
+      "{'og': <ndi.document.Document object at 0x123bd3ca0>}\n",
       "---\n",
-      "['m&m_v0', 'og_v0', 'gambino_v0', 'dre_v0', 'og_v1']\n"
+      "['gambino_v0', 'og_v1', 'dre_v0', 'm&m_v0', 'og_v0']\n"
      ]
     }
    ],
@@ -451,7 +454,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Deleting a document, along with its history\n",
+    "# Deleting a document, along with its history and dependencies\n",
     "og_doc.delete(force=True, remove_history=True)"
    ]
   },
@@ -471,7 +474,7 @@
     }
    ],
    "source": [
-    "# Showing that document was deleted\n",
+    "# Showing that all documents were deleted\n",
     "print(exp.current.get_document_dependencies())\n",
     "print('---')\n",
     "print([\n",
