--- a/example/Demo_Document_Dependencies_FS.ipynb
+++ b/example/Demo_Document_Dependencies_FS.ipynb
@@ -183,7 +183,7 @@
     }
    ],
    "source": [
-    "# Returing dict of dependencies for a dcoument and converts dependency ids to document objects\n",
+    "# Returning dict of dependencies for a dcoument and converting dependency ids to document objects\n",
     "result.get_dependencies()"
    ]
   },
@@ -242,6 +242,7 @@
     }
    ],
    "source": [
+    "# Viewing dependency data\n",
     "result.data['_dependencies']['force'].data"
    ]
   },
@@ -262,7 +263,7 @@
     }
    ],
    "source": [
-    "# Nesting deeper to show that depedencies are still document objects\n",
+    "# Nesting deeper to show that dependencies are still document objects\n",
     "result.data['_dependencies']['force'].get_dependencies()"
    ]
   },
@@ -292,6 +293,7 @@
     }
    ],
    "source": [
+    "# Viewing data of dependency of dependency\n",
     "result.data['_dependencies']['force'].data['_dependencies']['gas'].data"
    ]
   },
