--- a/example/Demo_Document_Dependencies_SQL.ipynb
+++ b/example/Demo_Document_Dependencies_SQL.ipynb
@@ -182,7 +182,7 @@
     }
    ],
    "source": [
-    "# Returing dict of dependencies for a dcoument and converts dependency ids to document objects\n",
+    "# Returing dict of dependencies for a dcoument and converting dependency ids to document objects\n",
     "result.get_dependencies()"
    ]
   },
@@ -261,7 +261,7 @@
     }
    ],
    "source": [
-    "# Nesting deeper to show that depedencies are still document objects\n",
+    "# Nesting deeper to show that dependencies are still document objects\n",
     "result.data['_dependencies']['force'].get_dependencies()"
    ]
   },
