--- a/example/Demo_FS_Document_Versions.ipynb
+++ b/example/Demo_FS_Document_Versions.ipynb
@@ -224,7 +224,7 @@
     }
    ],
    "source": [
-    "# Getting and showing a list of a document's document history\n",
+    "# Getting and showing a list of a document's history (oldest to newest)\n",
     "history = doc.get_history()\n",
     "[d.data for d in history]"
    ]
@@ -248,6 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Delete document, history, and dependencies\n",
     "doc.delete(force=True, remove_history=True)"
    ]
   },
@@ -257,6 +258,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "db.find_by_id(doc.id)"
    ]
   },
