--- a/example/Demo_App.ipynb
+++ b/example/Demo_App.ipynb
@@ -89,7 +89,7 @@
    "outputs": [],
    "source": [
     "# Get the first channel of the second probe in the experiment\n",
-    "channel = e.get_probes[1].get_channels()[0]"
+    "channel = e.get_probes()[1].get_channels()[0]"
    ]
   },
   {
