add daq_systems to Demo_App

--- a/example/Demo_App.ipynb
+++ b/example/Demo_App.ipynb
@@ -69,6 +69,7 @@
     "    directory='./tests/data/intracell_example',\n",
     "    database=db, \n",
     "    binary_collection=bc\n",
+    "    daq_systems=[ds]",
     ")"
    ]
   },
