revise notebook notation

--- a/example/Demo_Binary_Collection.ipynb
+++ b/example/Demo_Binary_Collection.ipynb
@@ -80,7 +80,7 @@
    "outputs": [],
    "source": [
     "# Creating an NDI Document\n",
-    "doc = Document({'hello': 'world'}, name='doc', type_='with_bin')\n",
+    "doc = Document({'content': 'numpy array'}, name='numpy_doc', type_='with_bin')\n",
     "\n",
     "# Adding NDI Document to experiment\n",
     "e.add_document(doc)"
@@ -173,6 +173,49 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating an NDI Document\n",
+    "doc = Document({'content': 'byte data'}, name='bytes_doc', type_='with_bin')\n",
+    "\n",
+    "# Adding NDI Document to experiment\n",
+    "e.add_document(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Demo-ing write stream object using Pythonic \"with\"\n",
+    "with doc.binary.open_write_stream() as ws:\n",
+    "    ws.write(b'datadatadata')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'datadatadata'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Demo-ing read stream object using Pythonic \"with\"\n",
+    "with doc.binary.open_read_stream() as rs:\n",
+    "    print(rs.read(-1).decode())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
