--- a/example/Demo_Database_FileSystem.ipynb
+++ b/example/Demo_Database_FileSystem.ipynb
@@ -103,7 +103,8 @@
     }
    ],
    "source": [
-    "# Testing that experiment (created above) was added to the database upon connection by finding it based on its id\n",
+    "# Testing that experiment (created above) was added to the database upon connection by \n",
+    "# finding it based on its id\n",
     "e2doc = db.find_by_id(e.id)\n",
     "\n",
     "# Recreating the Experiment object from the found experiment document\n",
@@ -155,7 +156,8 @@
     }
    ],
    "source": [
-    "# Using the find method by passing in a query to get the original experiment and verifying that its the same\n",
+    "# Using the find method by passing in a query to get the original experiment \n",
+    "# and verifying that its the same\n",
     "e2 == Experiment.from_document(\n",
     "    db.find(Q('_metadata.name') == 'myExperiment3')[0]\n",
     ")"
@@ -178,7 +180,7 @@
     }
    ],
    "source": [
-    "# Finding a nonmatch to show an empty list is returned\n",
+    "# Finding a non-match to show an empty list is returned\n",
     "db.find(Q('_metadata.name') == 'myExperiment2')"
    ]
   },
@@ -320,7 +322,7 @@
     }
    ],
    "source": [
-    "# Verifying that find method now returns empty array, meaning all items have been deleted\n",
+    "# Verifying that find method now returns an empty array, meaning all items have been deleted\n",
     "db.find()"
    ]
   },
@@ -351,7 +353,8 @@
     }
    ],
    "source": [
-    "# Adding a DaqSystem's document to the database showing that an already existing document can be upserted\n",
+    "# Adding a DaqSystem's document to the database showing that an already existing document \n",
+    "# can be upserted\n",
     "db.upsert(ds.document, force=True)\n",
     "db.find()"
    ]
@@ -380,7 +383,8 @@
     }
    ],
    "source": [
-    "# Updating a document by id using update_by_id method, passing in a document's id and a dict containing property changes\n",
+    "# Updating a document by id using update_by_id method, passing in a document's id and \n",
+    "# a dictionary containing property changes\n",
     "db.update_by_id(ds.id, { 'name': 'daq2' }, force=True)\n",
     "db.find()"
    ]
