--- a/example/Demo_Database_Query.ipynb
+++ b/example/Demo_Database_Query.ipynb
@@ -38,6 +38,7 @@
     }
    ],
    "source": [
+    "# Create condition for equality on data field 'a'\n",
     "# a = Q('a').equals('apple')\n",
     "a = Q('a') == 'apple'\n",
     "print(a)\n",
@@ -60,6 +61,7 @@
     }
    ],
    "source": [
+    "# Create condition for inequality on data field 'b'\n",
     "# a = Q('b').not_equals('bee')\n",
     "b = Q('b') != 'bee'\n",
     "print(b)\n",
@@ -83,6 +85,7 @@
     }
    ],
    "source": [
+    "# Create condition where field 'a' and 'b' are both true\n",
     "# z = a.and_(b)\n",
     "# z = Q('a').equals('apple').and_(Q('b').not_equals('bee'))\n",
     "# z = Q('a').equals('apple') & Q('b').not_equals('bee')\n",
@@ -110,6 +113,7 @@
     }
    ],
    "source": [
+    "# Create condition where at least one of the conditions for field 'a' or 'b' is true\n",
     "# y = a.or_(b)\n",
     "# y = Q('a').equals('apple').or_(Q('b').not_equals('bee'))\n",
     "# y = Q('a').equals('apple') | Q('b').not_equals('bee')\n",
@@ -135,6 +139,7 @@
     }
    ],
    "source": [
+    "# Create condition where the value of field 'c' is >= 5\n",
     "# c = Q('c').greater_than_or_equal_to(5)\n",
     "c = Q('c') >= 5\n",
     "print(c)\n",
@@ -156,6 +161,7 @@
     }
    ],
    "source": [
+    "# Create condition where the value of field 'd' is < 5\n",
     "# d = Q('d').less_than(5)\n",
     "d = Q('d') < 5\n",
     "print(d)\n",
@@ -177,6 +183,7 @@
     }
    ],
    "source": [
+    "# Create condition where one of 'a' or 'b' and one of 'c' or 'd' is True\n",
     "# (a.or_(b)).and_((c.or_(d)))\n",
     "for query in ((a | b) & ( c | d)):\n",
     "    print(query)"
@@ -197,6 +204,7 @@
     }
    ],
    "source": [
+    "# Create condition where either 'a' and 'b' or 'c' and 'd' are True\n",
     "# (a.and_(b)).or_(c.and_(d))\n",
     "for query in ((a & b) | (c & d)):\n",
     "    print(query)"
@@ -219,6 +227,8 @@
     }
    ],
    "source": [
+    "# Create condition where 'a', 'b' and 'c' are all True\n",
+    "# equivalent to a & b & c\n",
     "x = ((a & b) & c)\n",
     "print(x)\n",
     "for query in x:\n",
@@ -242,6 +252,8 @@
     }
    ],
    "source": [
+    "# Create condition where at least one of 'a', 'b', or 'c' is True\n",
+    "# equivalent to a | b | c\n",
     "w = (a | b) | c\n",
     "print(w)\n",
     "for query in w:\n",
@@ -263,6 +275,8 @@
     }
    ],
    "source": [
+    "# Create condition where field 'e' matches the regex pattern 'ele[a-z]$'\n",
+    "  # eg. 'elex', 'elez', 'elea', 'belez', 'sdlfjakdfelef'...\n",
     "e = Q('e').match(r'ele[a-z]$')\n",
     "print(e)\n",
     "print(e())"
@@ -283,6 +297,10 @@
     }
    ],
    "source": [
+    "# Create condition where string field 'f' contains the substring 'fish'\n",
+    "  # eg. 'tunafish', 'fish', 'many fish in the sea', 'not fish'...\n",
+    "# Or where list field 'f' contains an element 'fish'\n",
+    "  # eg. ['cat', 'fish', 'dog']\n",
     "f = Q('f').contains('fish')\n",
     "print(f)\n",
     "print(f())"
@@ -303,6 +321,7 @@
     }
    ],
    "source": [
+    "# Create condition where field 'g' is present on a document\n",
     "# g = Q('g').exists()\n",
     "g = +Q('g')\n",
     "print(g)\n",
@@ -324,6 +343,7 @@
     }
    ],
    "source": [
+    "# Create condition where field 'h' does not exist on a document\n",
     "# h = Q('h').exists(False)\n",
     "h = -Q('h')\n",
     "print(h)\n",
@@ -345,6 +365,7 @@
     }
    ],
    "source": [
+    "# Create a condition where field 'i' is equivalent to one of 1, 2, 3, or 4\n",
     "# i = Q('i').in_([1, 2, 3, 4])\n",
     "i = Q('i') >> [1, 2, 3, 4]\n",
     "print(i)\n",
@@ -372,6 +393,7 @@
     }
    ],
    "source": [
+    "# Example of an unresolved query object\n",
     "# Intentional Error\n",
     "j = Q('j')\n",
     "print(j)"
