--- a/example/Demo_Document_Dependencies_FS.ipynb
+++ b/example/Demo_Document_Dependencies_FS.ipynb
@@ -92,7 +92,7 @@
     }
    ],
    "source": [
-    "# Checking doc id\n",
+    "# Checking document id\n",
     "doc.id"
    ]
   },
@@ -122,7 +122,7 @@
     }
    ],
    "source": [
-    "# Checing doc data\n",
+    "# Checking document data\n",
     "doc.data"
    ]
   },
@@ -183,7 +183,7 @@
     }
    ],
    "source": [
-    "# Returning dict of dependencies for a dcoument and converting dependency ids to document objects\n",
+    "# Returning dictionary of dependencies for a document and converting dependency ids to document objects\n",
     "result.get_dependencies()"
    ]
   },
