--- a/example/Demo_Document_Dependencies_SQL.ipynb
+++ b/example/Demo_Document_Dependencies_SQL.ipynb
@@ -94,6 +94,7 @@
     }
    ],
    "source": [
+    "# Checking document id\n",
     "doc.id"
    ]
   },
@@ -123,6 +124,7 @@
     }
    ],
    "source": [
+    "# Checking document data\n",
     "doc.data"
    ]
   },
@@ -182,7 +184,7 @@
     }
    ],
    "source": [
-    "# Returing dict of dependencies for a dcoument and converting dependency ids to document objects\n",
+    "# Returing dictionary of dependencies for a document and converting dependency ids to document objects\n",
     "result.get_dependencies()"
    ]
   },
